# liant

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  doc.md
cmake/: liant-config.cmake.in
examples/: CMakeLists.txt
examples/src/: 00_liant_module_import_std.cpp  00_module_usage.cpp  01_liant_module_no_import_std.cpp  02_detect_dependencies_cycle.cpp  03_detect_dependency_cycle_in_base_container.cpp
examples/src/04_wget/: CMakeLists.txt  source.txt
examples/src/04_wget/mod/: app.cppm  cmd_parser.cppm  common.cppm  file_reader.cppm  file_writer.cppm  help.cppm  http_client.cppm  logger.cppm  wget.cppm
examples/src/04_wget/src/: app.cpp  cmd_parser.cpp  file_reader.cpp  file_writer.cpp  help.cpp  http_client.cpp  logger.cpp  main.cpp
include/liant/: container.hpp  container_slice.hpp  container_slice_base.hpp  container_slice_impl.hpp  container_view.hpp  dependency.hpp  dependency_macro.hpp  export_macro.hpp  factory.hpp  liant.hpp  missing_dependency_policy.hpp  ptr.hpp  snake_case.hpp  tuple.hpp  typelist.hpp
include/liant/details/: container_ptr.hpp  container_settings.hpp  container_slice_impl.hpp  container_slice_vtable.hpp  container_vtable.hpp  dynamic_array.hpp
src/: liant_nostd.ixx  liant_std.ixx
tests/: CMakeLists.txt
tests/src/: base_container.cpp  container_slice.cpp  container_slice_as_base_container.cpp  container_slice_ctor.cpp  container_slice_lazy_ctor.cpp  container_view.cpp  data.hpp  dependencies.cpp  example.cpp  single_container.cpp
